# NRP_BGA-SB

./: .gitignore  IMPLEMENTATION_PLAN.md  PROJECT_MEMORY.md  bg_action_selection_implementation_plan.md  bg_frequency_action_selection_experimental_plan.md  pyproject.toml
.github/workflows/: ci.yml
deprecated_toy_prototype_results/: _PROVENANCE.md  ablation_frequency_v2.json  cerebellum_results.json  change_of_mind_sweep.json  opensim_gonogo_sweep.json  opensim_plant_validation.json  perturbation_sweep_gonogo.json  perturbation_sweep_stopsignal.json
deprecated_toy_prototype_visuals/: _PROVENANCE.md
docs/: nrp_vs_prototype_comparison.md  prototype_report.md
experiments/: ablation_frequency.py  ablation_frequency_v2.py  bg_validation.py  cerebellum_adaptation.py  change_of_mind_sweep.py  frequency_sweep.py  generate_report.py  generate_visuals.py  kinematic_sweep.py  nrp_ablation.py  nrp_gonogo_sweep.py  nrp_integration_latency.py  nrp_vs_prototype.py  opensim_cerebellum_sweep.py  opensim_gonogo_sweep.py  perturbation_sweep.py  stop_signal_sweep.py
nrp/: compare.py  config_gen.py  run.py  score.py  serde.py
results/: bg_validation.json  frequency_sweep_results.json  kinematic_sweep_results.json  neuroscience_summary.md  open_data_candidates.md  perturbation_sweep_report.txt  stop_signal_sweep_results.json
tests/: __init__.py  conftest.py  test_ablation.py  test_ablation_frequency_v2.py  test_assemble.py  test_bg_integrator.py  test_bg_model.py  test_bg_model_step.py  test_bg_validation.py  test_cerebellum.py  test_cerebellum_experiment.py  test_cerebellum_sweep.py  test_change_of_mind_metrics.py  test_change_of_mind_sweep.py  test_cli_smoke.py  test_clips_dryrun.py  test_closed_loop.py  test_cortex.py  test_cue_generator.py  test_data_loader.py  test_engine_changeofmind.py  test_engine_gonogo.py  test_engine_stopsignal.py  test_engine_twochoice.py  test_figures_smoke.py  test_frequency_sweep.py  test_imports.py  test_integration_latency.py  test_logger.py  test_movement_metrics.py  test_opensim_cerebellum_sweep.py  test_opensim_plant.py  test_perturbation_plant.py  test_perturbation_sweep.py  test_perturbations.py  test_policies.py  test_reacher.py  test_reacher_correction.py  test_reacher_sweep.py  test_replay.py  (+9 more)
(+96 files in other folders)
