[project]
name = "nrp-bga-sb"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# nrp-core TF API mandates `from nrp_core import *` and
# `from nrp_core.data.nrp_json import *`; see examples/tf_exchange in nrp-core.
# Replacing these with explicit imports would break the documented pattern.
"nrp/tfs/*.py" = ["F403", "F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not opensim and not nrp'"
pythonpath = ["."]
markers = [
    "opensim: requires Docker + the nrp-bga-opensim image (deselected by default)",
    "nrp: requires the nrp-core runtime / NRPCoreSim (deselected by default)",
]
